# advent_of_code_2025

./: Cargo.toml  README.md  day_9_map.0
crates/ris_error/: Cargo.toml
crates/ris_error/src/: error.rs  throw.rs
crates/ris_log/: Cargo.toml
crates/ris_log/src/: constructed_log_message.rs  counter.rs  lib.rs  log.rs  log_message.rs
src/: day_1.rs  day_10.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
