[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
ris_error = { path = "crates/ris_error" }
ris_log = { path = "crates/ris_log" }

[profile.dev]
opt-level = 0
debug = true
#split-debuginfo = '...'  # Platform-specific.
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = true
#split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[features]
default = [
    "ris_log/logging_enabled"
]
